<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/White" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/SearchRRNumber"
                android:textColor="@color/DarkGray"
                android:textSize="12sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/txtSdoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkGray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text=" "
                android:textColor="@color/DarkGray"
                android:textSize="12sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/txtListNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkGray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/border_light_gray"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgPrevious"
                style="@style/btnJvnnlBlue"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/ic_action_previous_item" />

            <AutoCompleteTextView
                android:id="@+id/txtAccountNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:gravity="center"
                android:inputType="textNoSuggestions|textCapCharacters"
                android:textColor="@color/DarkGray"
                android:typeface="serif" 
                android:focusableInTouchMode="true"/>

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/ic_action_search_dark" />

            <ImageView
                android:id="@+id/imgNext"
                style="@style/btnJvnnlBlue"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/ic_action_next_item" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/border_curve_no_border"
            android:padding="2dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/border_light_gray"
                android:gravity="center"
                 android:text="@string/AccountDetails"
                android:textColor="@color/DarkGray"
                android:typeface="serif" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/White" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.2"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"
                     android:text="@string/AccountNo"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtAcc"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.8"
                    android:gravity="left|center"
                    android:paddingLeft="5dp"
                    android:textColor="@color/DarkGray"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/WhiteSmoke" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.2"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"
                    android:text="@string/ConsumerName"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.8"
                    android:gravity="left|center"
                    android:paddingLeft="5dp"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/White" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.2"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"
                    android:text="@string/Address"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.8"
                    android:gravity="left|center"
                    android:paddingLeft="5dp"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/WhiteSmoke" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.2"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"
                   android:text="@string/Tariff"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtTariff"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.8"
                    android:gravity="left|center"
                    android:paddingLeft="5dp"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/White" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.2"
                    android:gravity="center|left"
                    android:paddingLeft="5dp"
                    android:text="@string/MeterFixed"
                    android:textColor="@color/DarkGray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtArrears"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1.8"
                    android:gravity="left|center"
                    android:paddingLeft="5dp"
                    android:textColor="@color/Red"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/nextbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/border_light_gray"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/add_remove_new" />

            <Button
                android:id="@+id/btnDisconnect"
                style="@style/btnJvnnlBlue"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="right|center"
                android:layout_weight="1"
               android:text="@string/Next" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>